# rune-audit

./: .gitignore  CONTRIBUTING.md  Dockerfile  NOTICE  README.md  SECURITY.md  failed_logs.txt  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: project-sync.yml  publish-pypi.yml  quality-gates.yml  release.yml  scheduled-audit.yml
docs/: OSS_PROJECTS.md
docs/external-projects/: case-study-rune.md  ci-integration.md  configuration.md  custom-inspectors.md  inspector-library.md  quickstart.md  requirement-packs.md  stdlib-inspectors.md
rune_audit/: __init__.py  __main__.py  config.py
rune_audit/cli/: __init__.py  app.py  collect.py  compliance.py  config_cmd.py  dashboard_cmd.py  formal_cmd.py  init_cmd.py  operator_cmd.py  rekor_cmd.py  report.py  sign_cmd.py  slsa_cmd.py  sr2_cmd.py  tpm2_cmd.py  vex.py
rune_audit/collectors/: __init__.py  base.py  github.py  operator.py  tpm2.py  vex.py
rune_audit/dashboard/: __init__.py  collector.py  models.py  renderer.py
rune_audit/formal/: __init__.py  checker.py  models.py
rune_audit/models/: __init__.py  attestation.py  cve.py  evidence.py  gate.py  operator.py  sbom.py  sigstore.py  slsa.py  vex.py
rune_audit/rekor/: __init__.py  client.py  models.py
rune_audit/reporters/: __init__.py  compliance.py  report_generator.py
rune_audit/sigstore/: __init__.py  engine.py  models.py
rune_audit/sr2/: __init__.py  catalog.py  compliance_config.py  dashboard_matrix.py  engine.py  inspectors.py  models.py  packs.py  project_config.py  registry.py  standard_inspectors.py
rune_audit/sr2/builtin_packs/: __init__.py  cis-kubernetes.yaml  iec-62443-ml4.yaml  nist-ssdf.yaml  owasp-asvs.yaml  slsa-l3.yaml
rune_audit/sr2/inspector_stdlib/: _util.py  (+15 more)
rune_audit/validators/: __init__.py  vex_validator.py
rune_audit/verifiers/: __init__.py  slsa.py
specs/: AuditChain.tla  ComplianceMatrix.tla  GateAggregation.tla  README.md
tests/: README.md  conftest.py  test_compliance_and_packs.py  test_config.py  test_init.py  test_init_cli.py  test_ollama_integration.py  test_sr2_catalog.py  test_sr2_dashboard_matrix.py  test_sr2_dashboard_matrix_coverage.py  test_sr2_engine_and_errors.py  test_sr2_future_inspectors.py  test_stdlib_inspectors.py  test_stdlib_inspectors_coverage.py  test_stdlib_inspectors_integration.py
tests/fixtures/: gh_workflow_run.json  grype_report.json  openvex.json  sample_attestation.json  sample_cyclonedx.json  sample_grype.json  sample_openvex.json  sample_trivy.json  sbom_cyclonedx.json  trivy_report.json
tests/test_cli/: test_cli_main.py  test_commands.py  test_entrypoint.py
tests/test_collectors/: test_base.py  test_fixtures.py  test_github.py  test_operator.py  test_tpm2.py  test_vex_collector.py
tests/test_dashboard/: test_collector.py  test_models.py  test_renderer.py
tests/test_formal/: test_checker.py
tests/test_models/: test_attestation.py  test_config.py  test_cve.py  test_evidence.py  test_gate.py  test_sbom.py  test_sigstore.py  test_slsa.py  test_vex.py
tests/test_rekor/: test_client.py
tests/test_reporters/: test_compliance.py  test_report_generator.py
tests/test_sigstore/: test_engine.py
tests/test_validators/: test_vex_validator.py
tests/test_verifiers/: conftest.py  test_slsa.py
(+22 files in other folders)
